--- a/css/styles.css
+++ b/css/styles.css
@@ -5,12 +5,13 @@ body {
 
 #title {
   background-color: #FD4C68;
+  color: #fff;
 }
 
 .custom-h1{
   font-family: 'Montserrat';
   font-weight: 900;
-  font-size: 3rem;
+  font-size: 3.5rem;
   line-height: 1.5;
 }
 
@@ -41,4 +42,41 @@ body {
 
 .download-button{
   margin: 5% 3% 5% 0;
+}
+
+/* Title Image */
+
+.title-image{
+  width: 60%;
+  transform: rotate(25deg);
+}
+
+/* Features */
+
+#features {
+  padding: 7% 15%;
+}
+
+.feature-box {
+  text-align: center;
+  padding: 5%;
+}
+
+.feature-title {
+  font-family: 'Montserrat';
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+.feature-text{
+  color: #8f8f8f;
+}
+
+.feature-icon {
+  color: #ef8172;
+  margin-bottom: 1rem;
+}
+
+.feature-icon:hover{
+  color: #FD4C68;
 }
