--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body {
 }
 
 .container-fluid {
-  padding: 3% 15%;
+  padding: 3% 15% 8%;
 }
 
 /* Navigation Bar */
@@ -48,7 +48,7 @@ body {
 
 .title-image{
   position: absolute;
-  right: 100px;
+  right: 30%;
   width: 60%;
   transform: rotate(25deg);
 }
@@ -59,7 +59,6 @@ body {
   padding: 7% 15%;
   background-color: #fff;
   position: relative;
-  z-index: 1;
 }
 
 .feature-box {
