--- a/css/styles.css
+++ b/css/styles.css
@@ -134,12 +134,39 @@ body {
 }
 
 
+@media (max-width: 1028px){
+  .title-image{
+    display: none;
+  }
+}
+
+/* CTA  */
+
+#cta {
+  background-color: #ff4c68;
+  text-align: center;
+  padding: 3%;
+}
+
+.custom-h3 {
+  font-family: 'Montserrat';
+  font-weight: 900;
+  color: #fff;
+  font-size: 3em;
+  padding: 2%;
+}
 
 
+/* Footer */
 
+#footer {
+  text-align: center;
+  margin-top: 5%;
+}
 
-
-
+.icon-footer {
+  margin: 0 10px 20px;
+}
 
 
 
